--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^5.8.3"
+    "typescript": "4.9.5"
   },
   "resolutions": {
     "typescript": "4.9.5",
