--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.3",
-    "i18next": "^24.2.1",
+    "i18next": "^23.16.8",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.1",
     "js-cookie": "^3.0.5",
@@ -22,7 +22,7 @@
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.2.0",
     "react-favicon": "^2.0.3",
-    "react-i18next": "^15.4.0",
+    "react-i18next": "13.5.0",
     "react-router-dom": "^6.21.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
@@ -52,11 +52,6 @@
     ]
   },
   "devDependencies": {
-    "typescript": "4.9.5"
-  },
-  "resolutions": {
-    "typescript": "4.9.5",
-    "i18next": "24.2.1",
-    "react-i18next": "15.4.0"
+    "typescript": "^5.8.3"
   }
 }
